--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 /* Resets */
 
@@ -130,6 +131,11 @@ table {
 }
 
 /* App */
+
+body {
+  background-color: #f9f7f4;
+}
+
 a {
   text-decoration: none;
 }
