--- a/src/index.css
+++ b/src/index.css
@@ -88,8 +88,6 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  font: inherit;
   font-family: 'Roboto', sans-serif;
   vertical-align: baseline;
 }
@@ -138,8 +136,9 @@ body {
 
 a {
   text-decoration: none;
+  color: #000;
 }
 
 a:visited {
-  color: black;
+  color: #000;
 }
