--- a/src/app/pages/FavList/FavList.css
+++ b/src/app/pages/FavList/FavList.css
@@ -8,8 +8,10 @@
 }
 
 .favlist-offline-container {
+  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 20px;
 }
