--- a/src/app/core/Footer/Footer.css
+++ b/src/app/core/Footer/Footer.css
@@ -1,6 +1,16 @@
 .footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   text-align: center;
-  margin: 10px;
+  margin-bottom: 10px;
   font-size: 14px;
   font-weight: bold;
+}
+
+.links {
+  display: flex;
+  gap: 14px;
+  font-size: 35px;
 }
