--- a/src/app/pages/BookDetail/BookDetail.css
+++ b/src/app/pages/BookDetail/BookDetail.css
@@ -1,4 +1,5 @@
 .details-container {
+  height: 80vh;
   width: 70%;
   display: flex;
   /* align-items: center; */
@@ -7,7 +8,7 @@
 }
 
 .details__img {
-  height: 500px;
+  height: 550px;
   border-radius: 12px;
 }
 
@@ -16,4 +17,19 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+.details__title {
+  font-size: 48px;
+}
+
+.details-text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  font-size: 18px;
+}
+
+.details__review {
+  font-style: italic;
 }
