--- a/src/app/pages/Home/Home.css
+++ b/src/app/pages/Home/Home.css
@@ -1,28 +1,62 @@
 .home {
   height: 80vh;
-  width: 100%;
   display: flex;
+  flex-direction: column;
+  gap: 40px;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .home__title {
-  font-size: 72px;
+  font-size: 48px;
   font-weight: bold;
   font-family: 'Space Mono', serif;
 }
 
 .home__title__b {
-  font-size: 96px;
+  font-size: 65px;
   font-family: 'Space Mono', serif;
   color: #409d69;
 }
 
 .home__subtitle {
-  font-size: 24px;
-  margin-left: 5px;
+  font-size: 18px;
+  margin-left: 6px;
 }
 
 .home__img {
-  border-radius: 20px;
+  width: 300px;
+}
+
+@media (min-width: 1280px) {
+  .home {
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .home__title {
+    font-size: 80px;
+    font-weight: bold;
+    font-family: 'Space Mono', serif;
+  }
+
+  .home__title__b {
+    font-size: 104px;
+    font-family: 'Space Mono', serif;
+    color: #409d69;
+  }
+
+  .home__subtitle {
+    font-size: 24px;
+    margin-left: 5px;
+  }
+
+  .home__img {
+    width: 100%;
+    border-radius: 20px;
+  }
 }
