--- a/src/app/components/Book/Book.css
+++ b/src/app/components/Book/Book.css
@@ -2,9 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
+  text-align: center;
   gap: 15px;
-  width: 580px;
 }
 
 .book__main-info {
@@ -13,28 +13,46 @@
   gap: 10px;
 }
 
-.book__main-details {
-  display: flex;
-  justify-content: space-around;
-}
-
-.book__title {
-  font-size: 18px;
-  font-weight: bold;
-  text-align: center;
-}
-
 .book__img {
-  height: 200px;
-  width: 150px;
+  height: 240px;
+  width: 180px;
   border-radius: 15px;
 }
 
-.book__description {
-  font-size: 15px;
-  line-height: 16px;
+.book__main-details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: space-around;
 }
 
-.book__author {
-  font-size: 15px;
+@media (min-width: 1280px) {
+  .book {
+    flex-direction: row;
+    width: 580px;
+  }
+
+  .book__main-details {
+    flex-direction: row;
+  }
+
+  .book__title {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+  }
+
+  .book__img {
+    height: 200px;
+    width: 150px;
+  }
+
+  .book__description {
+    font-size: 15px;
+    line-height: 16px;
+  }
+
+  .book__author {
+    font-size: 15px;
+  }
 }
