--- a/src/app/core/Footer/Footer.css
+++ b/src/app/core/Footer/Footer.css
@@ -1,4 +1,5 @@
 .footer {
+  margin-top: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,4 +14,10 @@
   display: flex;
   gap: 14px;
   font-size: 35px;
+}
+
+@media (min-width: 1280px) {
+  .links {
+    font-size: 48px;
+  }
 }
