--- a/src/app/core/NavBar/NavBar.css
+++ b/src/app/core/NavBar/NavBar.css
@@ -1,17 +1,16 @@
 .navbar {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  height: 45px;
-  background-color: #f2ede8;
+  gap: 20px;
 }
 
 .navbar__logo {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 12px;
-  margin-left: 80px;
 }
 
 .logo__title {
@@ -27,8 +26,8 @@
 
 .navbar__menu {
   display: flex;
-  gap: 60px;
-  margin-right: 80px;
+  flex-direction: column;
+  gap: 7px;
 }
 
 .navbar__menu__item {
@@ -36,11 +35,32 @@
   font-size: 15px;
 }
 
+.navbar a.active {
+  font-weight: bold;
+}
+
 .navbar__menu__welcome {
   font-weight: bold;
   cursor: default;
 }
 
-.navbar a.active {
-  font-weight: bold;
+@media (min-width: 1280px) {
+  .navbar {
+    flex-direction: row;
+    justify-content: space-between;
+    height: 45px;
+    background-color: #f2ede8;
+  }
+
+  .navbar__logo {
+    flex-direction: row;
+    gap: 12px;
+    margin-left: 80px;
+  }
+
+  .navbar__menu {
+    flex-direction: row;
+    gap: 60px;
+    margin-right: 80px;
+  }
 }
