--- a/src/app/pages/About/About.css
+++ b/src/app/pages/About/About.css
@@ -1,9 +1,17 @@
 .about {
-  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px;
-  width: 50%;
+  margin-top: 20px;
+  gap: 50px;
+}
+
+@media (min-width: 1280px) {
+  .about {
+    height: 80vh;
+    margin-top: 0;
+    gap: 20px;
+    width: 50%;
+  }
 }
