--- a/src/app/pages/BookList/BookList.css
+++ b/src/app/pages/BookList/BookList.css
@@ -2,7 +2,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 65px;
+  flex-direction: column;
+  gap: 35px;
+}
+
+@media (min-width: 1280px) {
+  .booklist-container {
+    flex-direction: row;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 65px;
+  }
 }
