--- a/src/app/pages/Login/Login.css
+++ b/src/app/pages/Login/Login.css
@@ -1,11 +1,10 @@
 .login {
-  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 25px;
-  width: 80%;
+  margin-top: 20px;
 }
 
 .login__form {
@@ -13,4 +12,12 @@
   align-items: center;
   flex-direction: column;
   gap: 12px;
+}
+
+@media (min-width: 1280px) {
+  .login {
+    height: 80vh;
+    margin-top: 0;
+    width: 80%;
+  }
 }
