--- a/src/app/pages/Register/Register.css
+++ b/src/app/pages/Register/Register.css
@@ -1,16 +1,10 @@
 .register {
-  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 20px;
   gap: 25px;
-  width: 80%;
-}
-
-.register__subtitle {
-  width: 50%;
-  text-align: center;
 }
 
 .register__form {
@@ -23,4 +17,17 @@
 .input {
   width: 200px;
   padding: 5px;
+}
+
+@media (min-width: 1280px) {
+  .register {
+    height: 80vh;
+    margin-top: 0;
+    width: 80%;
+  }
+
+  .register__subtitle {
+    width: 50%;
+    text-align: center;
+  }
 }
